﻿сохранение в файл статистики наблюдений
