@@ -2,8 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net461" />
-  <package id="HtmlAgilityPack" version="1.11.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.11.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.110.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.110.0" targetFramework="net461" />
