@@ -1,2 +1,8 @@
-﻿сохранение в файл статистики наблюдений
-
+﻿System.NullReferenceException
+  HResult=0x80004003
+  Сообщение = Ссылка на объект не указывает на экземпляр объекта.
+  Источник = GMap.NET.Core
+  Трассировка стека:
+   at GMap.NET.Internals.FastReaderWriterLock.AcquireWriterLock()
+   at GMap.NET.Internals.Core.Dispose(Boolean disposing)
+   at GMap.NET.Internals.Core.Finalize()
